changing the search form

--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -80,6 +80,12 @@
     <div class="row g-2">
         {{ render_field(form.insolvent_only_search) }}
     </div>
+    <div class="row g-2">
+        {{ render_field(form.zapis_od) }}
+    </div>
+    <div class="row g-2">
+        {{ render_field(form.zapis_do) }}
+    </div>
   </p>
   <p><input type="submit" value="Search">
   </p>
