--- a/templates/results2.html
+++ b/templates/results2.html
@@ -97,7 +97,7 @@
     <tr>
         <td>Sídlo:</td>
         <td>{{ row.sidlo }}</td>
-        <td></td>
+        <td><a href="/{{ row.ico }}">Úplný výpis</a></td>
         <td></td>
     </tr>
     {% if insolvency_notes|length > 0 %}
