--- a/templates/extract.html
+++ b/templates/extract.html
@@ -74,11 +74,12 @@
     {% set ico_buffer = "" %}
 {% endif %}
 
+{% set undedrline_open_deleted = "<u>" %}
+{% set undedrline_closed_deleted = "</u>" %}
+
 <h1>Výpis z obchodního rejstříku</h1>
 <h2>{{ row.nazev }}, {{ row.oddil }} {{ row.vlozka }} vedená u {{ soud }}</h2>
 <p><a href="/">Zpět na vyhledání.</a></p>
-
-{{ row.predmet_podnikani }}
 
 <table class= "table" style="width: 100%">
     <tr>
@@ -111,34 +112,65 @@
         <td>{{ row.pravni_forma[0].pravni_forma }}</td>
         <td></td>
     </tr>
-    
-    <tr>
-        <td>Předmět podnikání - test:</td>
-        <td>{{ row.predmet_podnikani[0].child.predmet_podnikani }}</td>
-        <td>Zapsáno: {{ row.predmet_podnikani[0].zapis_datum }} <br> Vymazáno: {{ row.predmet_podnikani[0].vymaz_datum }} </td>
-        <td></td>
-    </tr>
 
-    {% if row.predmet_podnikani|length == 1 %}
+    {% if row.predmet_podnikani|length > 0 %}
     <tr>
         <td>Předmět podnikání:</td>
-        <td>{{ row.predmet_podnikani }}</td>
-        <td>Zapsáno: {{ row.predmet_podnikani[0] }} <br> Vymazáno: {{ row.predmet_podnikani[0].vymaz_datum }} </td>
-    </tr>
-    {% elif row.predmet_podnikani|length > 1 %}
-    <tr>
-        <td>Předmět podnikání:</td>
-        <td>{{ row.predmet_podnikani }}</td>
-        <td>Zapsáno: {{ row.predmet_podnikani[0].zapis_datum }} <br> Vymazáno: {{ row.predmet_podnikani[0].vymaz_datum }} </td>
+        {% if row.predmet_podnikani[0].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.predmet_podnikani[0].predmet_podnikani.predmet_podnikani }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.predmet_podnikani[0].zapis_datum }} {% if row.predmet_podnikani[0].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.predmet_podnikani[0].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
     </tr>
     {% for i in range (1, row.predmet_podnikani|length) %}
     <tr>
         <td></td>
-        <td>{{ row.predmet_podnikani[i].predmet_podnikani }}</td>
-        <td>Zapsáno: {{ row.predmet_podnikani[i].zapis_datum.company_id }} <br> Vymazáno: {{ row.predmet_podnikani[i].vymaz_datum }} </td>
-    </tr>            
+        {% if row.predmet_podnikani[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.predmet_podnikani[i].predmet_podnikani.predmet_podnikani }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.predmet_podnikani[i].zapis_datum }} {% if row.predmet_podnikani[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.predmet_podnikani[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>    
     {% endfor %}
     {% endif %}
+
+    {% if row.predmet_cinnosti|length > 0 %}
+    <tr>
+        <td>Předmět činnosti:</td>
+        {% if row.predmet_cinnosti[0].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.predmet_cinnosti[0].predmet_cinnosti.predmet_cinnosti }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.predmet_cinnosti[0].zapis_datum }} {% if row.predmet_cinnosti[0].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.predmet_cinnosti[0].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>
+    {% for i in range (1, row.predmet_cinnosti|length) %}
+    <tr>
+        <td></td>
+        {% if row.predmet_cinnosti[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.predmet_cinnosti[i].predmet_cinnosti.predmet_cinnosti }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.predmet_cinnosti[i].zapis_datum }} {% if row.predmet_cinnosti[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.predmet_cinnosti[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>    
+    {% endfor %}
+    {% endif %}
+    
 
     {% if insolvency_notes|length > 0 %}
     <tr>
