adding an option for an actual extract

--- a/templates/results2.html
+++ b/templates/results2.html
@@ -98,7 +98,7 @@
         <td>Sídlo:</td>
         <td>{{ row.sidlo }}</td>
         <td><a href="/{{ row.ico }}">Úplný výpis</a></td>
-        <td></td>
+        <td><a href="/{{ row.ico }}-actual">Aktuální výpis</a></td>
     </tr>
     
     {% if insolvency_notes|length > 0 %}
