--- a/templates/extract.html
+++ b/templates/extract.html
@@ -40,22 +40,6 @@
     {% set den = zapis_split[2]  %}
 {% endif %}
 
-{% if row.soud == "MSPH" %}
-    {% set soud = "Městského soudu v Praze" %}
-{% elif row.soud == "KSCB" %}
-    {% set soud = "Krajského soudu v Českých Budějovicích" %}
-{% elif row.soud == "KSOS" %}
-    {% set soud = "Krajského soudu v Ostravě" %}
-{% elif row.soud == "KSPL" %}
-    {% set soud = "Krajského soudu v Plzni" %}
-{% elif row.soud == "KSBR" %}
-    {% set soud = "Krajského soudu v Brně" %}
-{% elif row.soud == "KSHK" %}
-    {% set soud = "Krajského soudu v Hradci Králové" %}
-{% elif row.soud == "KSUL" %}
-    {% set soud = "Krajského soudu v Ústí nad Labem" %}
-{% endif %}
-
 {% if insolvency_notes|length > 0 %}
     {% set table_style = "table table-danger" %}
 {% elif loop.index % 2 == 0 %}
@@ -74,11 +58,18 @@
     {% set ico_buffer = "" %}
 {% endif %}
 
+
+
 {% set undedrline_open_deleted = "<u>" %}
 {% set undedrline_closed_deleted = "</u>" %}
 
 <h1>Výpis z obchodního rejstříku</h1>
-<h2>{{ row.nazev }}, {{ row.oddil }} {{ row.vlozka }} vedená u {{ soud }}</h2>
+{% for i in range (row.soudni_zapis|length) %}
+    {% if row.soudni_zapis[i].vymaz_datum == 0 %}
+<h2>{{ row.nazev }}, {{ row.soudni_zapis[i].oddil }} {{ row.soudni_zapis[i].vlozka }} vedená u {{ row.soudni_zapis[i].soud }}</h2>
+{% endif %}
+{% endfor %}
+
 <p><a href="/">Zpět na vyhledání.</a></p>
 
 <table class= "table" style="width: 100%">
@@ -87,16 +78,64 @@
         <td style="width:60%">{{den}}. {{mesic}} {{zapis_split[0]}}</td>
         <td style="width:25%"></td>
     </tr>
+    {% if row.soudni_zapis|length > 0 %}
     <tr>
         <td>Spisová značka:</td>
-        <td>{{ row.oddil }} {{ row.vlozka }} vedená u {{ soud }}</td>
-        <td></td>
+        {% if row.soudni_zapis[0].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.soudni_zapis[0].oddil }} {{ row.soudni_zapis[0].vlozka }} vedená u {{ row.soudni_zapis[0].soud }}  {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.soudni_zapis[0].zapis_datum }} {% if row.soudni_zapis[0].vymaz_datum != 0 %} <br> Vymazáno: {{ row.soudni_zapis[0].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
     </tr>
+
+    {% for i in range (1, row.soudni_zapis|length) %}
+    <tr>
+        <td></td>
+        {% if row.soudni_zapis[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.soudni_zapis[i].oddil }} {{ row.soudni_zapis[i].vlozka }} vedená u {{ row.soudni_zapis[i].soud }}  {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.soudni_zapis[i].zapis_datum }} {% if row.soudni_zapis[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.soudni_zapis[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>    
+    {% endfor %}
+    {% endif %} 
+    
+    {% if row.obchodni_firma|length > 0 %}
     <tr>
         <td>Obchodní firma:</td>
-        <td>{{ row.nazev }}</td>
-        <td></td>
+        {% if row.obchodni_firma[0].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.obchodni_firma[0].nazev_text }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.obchodni_firma[0].zapis_datum }} {% if row.obchodni_firma[0].vymaz_datum != 0 %} <br> Vymazáno: {{ row.obchodni_firma[0].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
     </tr>
+    {% for i in range (1, row.obchodni_firma|length) %}
+    <tr>
+        <td></td>
+        {% if row.obchodni_firma[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.obchodni_firma[i].nazev_text }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.obchodni_firma[i].zapis_datum }} {% if row.obchodni_firma[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.obchodni_firma[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>    
+    {% endfor %}
+    {% endif %}    
     <tr>
         <td>Sídlo:</td>
         <td>{{ row.sidlo }}</td>
