--- a/templates/extract-actual.html
+++ b/templates/extract-actual.html
@@ -35,7 +35,19 @@
         {% endif %}
 {% endfor %}
 
+{% set insolvency_notes = [] %}
+{% for i in range (row.insolvence|length) %}
+    {% if row.insolvence[i].vymaz_datum == 0 %}
+        {% set insolvency_notes = insolvency_notes.append(row.insolvence[i].insolvency_event) %}
+        {% endif %}
+{% endfor %}
 
+{% set konkurz_notes = [] %}
+{% for i in range (row.konkurz|length) %}
+    {% if row.konkurz[i].vymaz_datum == 0 %}
+        {% set konkurz_notes = konkurz_notes.append(row.konkurz[i].konkurz_event) %}
+        {% endif %}
+{% endfor %}
 
 {% set zapis_split = row.zapis.split("-") %}
 {% if zapis_split[1] == "01" %}
@@ -218,6 +230,23 @@
         </tr>            
         {% endfor %}
     {% endif %}
+
+    {% if konkurz_notes|length > 0 %}
+    <tr>
+        <td>Údaje o konkurzech:</td>
+        <td>{{ konkurz_notes[0] }}</td>
+        <td></td>
+    </tr>        
+        {% for i in range (1, konkurz_notes|length) %}
+        <tr>
+            <td></td>
+            <td>{{ konkurz_notes[i] }}</td>
+            <td></td>
+        </tr>            
+        {% endfor %}
+    {% endif %}
+
+
 
     {% if ostatni_skutecnosti_notes|length > 0 %}
     <tr>
