--- a/templates/extract.html
+++ b/templates/extract.html
@@ -2,11 +2,6 @@
 
 {% for row in results %}
 
-{% set insolvency_notes = [] %}
-{% for elem in row.insolvence %}
-    {% set insolvency_notes = insolvency_notes.append(elem.insolvency_event) %}
-{% endfor %}
-
 {% set zapis_split = row.zapis.split("-") %}
 {% if zapis_split[1] == "01" %}
     {% set mesic = "ledna" %}
@@ -136,11 +131,36 @@
     </tr>    
     {% endfor %}
     {% endif %}    
+
+    {% if row.sidlo_text|length > 0 %}
     <tr>
         <td>Sídlo:</td>
-        <td>{{ row.sidlo }}</td>
-        <td></td>
+        {% if row.sidlo_text[0].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.sidlo_text[0].sidlo_text.adresa_text }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.sidlo_text[0].zapis_datum }} {% if row.sidlo_text[0].vymaz_datum != 0 %} <br> Vymazáno: {{ row.sidlo_text[0].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
     </tr>
+    {% for i in range (1, row.sidlo_text|length) %}
+    <tr>
+        <td></td>
+        {% if row.sidlo_text[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.sidlo_text[i].sidlo_text.adresa_text }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.sidlo_text[i].zapis_datum }} {% if row.sidlo_text[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.sidlo_text[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>    
+    {% endfor %}
+    {% endif %}  
+
     <tr>
         <td>Identifikační číslo:</td>
         <td>{{ ico_buffer|join("") }}{{ row.ico }}</td>
@@ -405,21 +425,64 @@
     {% endfor %}
     {% endif %}
 
-
-    {% if insolvency_notes|length > 0 %}
+    {% if row.insolvence|length > 0 %}
     <tr>
         <td>Údaje o insolvencích:</td>
-        <td>{{ insolvency_notes[0] }}</td>
+        {% if row.insolvence[0].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.insolvence[0].insolvency_event }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.insolvence[0].zapis_datum }} {% if row.insolvence[0].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.insolvence[0].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>
+    {% for i in range (1, row.insolvence|length) %}
+    <tr>
         <td></td>
-    </tr>        
-        {% for i in range (1, insolvency_notes|length) %}
-        <tr>
-            <td></td>
-            <td>{{ insolvency_notes[i] }}</td>
-            <td></td>
-        </tr>            
-        {% endfor %}
+        {% if row.insolvence[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.insolvence[i].insolvency_event }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.insolvence[i].zapis_datum }} {% if row.insolvence[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.insolvence[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>    
+    {% endfor %}
     {% endif %}
+
+    {% if row.konkurz|length > 0 %}
+    <tr>
+        <td>Údaje o konkurzech:</td>
+        {% if row.konkurz[0].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.konkurz[0].konkurz_event }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.konkurz[0].zapis_datum }} {% if row.konkurz[0].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.konkurz[0].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>
+    {% for i in range (1, row.konkurz|length) %}
+    <tr>
+        <td></td>
+        {% if row.konkurz[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.konkurz[i].konkurz_event }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.konkurz[i].zapis_datum }} {% if row.konkurz[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.konkurz[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>    
+    {% endfor %}
+    {% endif %}    
+
 
     {% if row.ostatni_skutecnosti|length > 0 %}
     <tr>
