--- a/templates/extract.html
+++ b/templates/extract.html
@@ -67,7 +67,7 @@
 
 <p><a href="/">Zpět na vyhledání.</a></p>
 
-<p>Toto jsem extrahoval: {{ row.statutarni_organ_text[0].children[0].child.zpusob_jednani_text }}</p>
+<p>Toto jsem extrahoval: {{ row.statutarni_organ_text[0].zpusoby_jednani[1].zpusob_jednani.zpusob_jednani_text }}</p>
 
 
 <table class= "table" style="width: 100%">
